<resources>
    <string name="app_name">App Weather</string>

    <string name="message_request_permission_read_phone_state">We need permission to identify your device</string>
    <!--activity_main.xml-->
    <string name="country_name">Viet Nam</string>
    <string name="address_location">42 Xuan Dinh, Bac Tu Liem, Ha Noi, Viet Nam</string>
    <string name="date_time">WEDNEDAY 9 AM</string>
    <string name="temp">18°C</string>
    <string name="status">Sunny</string>
    <string name="humidity">humidity</string>
    <string name="humidity_number">90%</string>
    <string name="wind">wind</string>
    <string name="wind_number">3 km/h</string>
    <string name="clound">clound</string>
    <string name="clound_number">40%</string>
    <string name="button_7days">The next 7 days</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>

    <!--MainActivity.java-->
    <string name="Toat1">No location exists</string>

    <!--list_data_weather.xml-->
    <string name="date">Date Time</string>
    <string name="status_next">Status</string>
    <string name="max_temp">Max Temple</string>
    <string name="min_temp">Min Temple</string>
    <string name="todo2">TODO</string>

    <!--activity_maps.xml-->
    <string name="edittex_hind">Enter address</string>
    <string name="toat2">You have not selected a location</string>

    <!--Description weather-->
    <string name="clear_sky">clear sky</string>
    <string name="few_clouds">few clouds</string>
    <string name="scattered_clouds">scattered clouds</string>
    <string name="broken_clouds">broken clouds</string>
    <string name="shower_rain">shower rain</string>
    <string name="rain">rain</string>
    <string name="thunderstorm">thunderstorm</string>
    <string name="snow">snow</string>
    <string name="mist">mist</string>
    <string name="light_rain">light rain</string>
    <string name="sky_is_clear">sky is clear</string>
    <string name="moderate_rain">moderate rain</string>
    <string name="heavy_intensity_rain">heavy intensity rain</string>
    <string name="overcast_clouds">overcast clouds</string>

    <!--string Maps_type.xml-->
    <string name="map_type">Map type</string>
    <string name="map_normal">Normal</string>
    <string name="map_satellite">Satellite</string>
    <string name="map_hybrid">Hybrid</string>
</resources>
