<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_buton"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal"
    android:weightSum="2">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/_130sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_weight="1"
        android:background="#B3F3F3F3"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/text1"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_next"
            android:textColor="@color/text1"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="@dimen/_130sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_weight="1"
        android:background="@color/backround_list">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:weightSum="3">

            <ImageView
                android:id="@+id/img_status"
                android:layout_width="0dp"
                android:layout_height="@dimen/_100sdp"
                android:layout_weight="1"
                android:contentDescription="@string/todo2"
                android:src="@drawable/sunny_icon" />

            <TextView
                android:id="@+id/tv_min_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/min_temp"
                android:textColor="@color/text1"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_max_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/max_temp"
                android:textColor="@color/text1"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>