<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/bg_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rain_backgroung">

            <RelativeLayout
                android:id="@+id/brackground_hind"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_hin">

                <LinearLayout
                    android:id="@+id/btn_maps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:gravity="center"
                    android:padding="@dimen/_2sdp">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:contentDescription="@string/todo1"
                        android:src="@drawable/ic_maps_location" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/address_location"
                    android:textAllCaps="true"
                    android:textColor="@color/text1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_address"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/date_time"
                    android:textAllCaps="true"
                    android:textColor="@color/text1"
                    android:textSize="12sp" />

                <RelativeLayout
                    android:id="@+id/group_progressbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_time"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_2sdp"
                    android:background="@drawable/bg_status"
                    android:padding="@dimen/_5sdp">

                    <ImageView
                        android:id="@+id/img_icon"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_110sdp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/sunny_icon" />

                    <ProgressBar
                        android:id="@+id/progress_main"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_centerInParent="true"
                        android:indeterminateTint="@color/color_progress_bar"
                        android:progress="80" />
                </RelativeLayout>


                <TextView
                    android:id="@+id/tv_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/group_progressbar"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/temp"
                    android:textColor="@color/text1"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_temp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/status"
                    android:textAllCaps="true"
                    android:textColor="@color/text1"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/tv_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_status"
                    android:layout_marginLeft="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_2sdp"
                    android:background="@drawable/bg_status"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/humidity"
                            android:textAllCaps="true"
                            android:textColor="@color/text1"
                            android:textSize="@dimen/_16sdp" />

                        <TextView
                            android:id="@+id/tv_humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/humidity_number"
                            android:textColor="@color/text1"
                            android:textSize="@dimen/_16sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/wind"
                            android:textAllCaps="true"
                            android:textColor="@color/text1"
                            android:textSize="@dimen/_16sdp" />

                        <TextView
                            android:id="@+id/tv_wind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/wind_number"
                            android:textColor="@color/text1"
                            android:textSize="@dimen/_16sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/clound"
                            android:textAllCaps="true"
                            android:textColor="@color/text1"
                            android:textSize="@dimen/_16sdp" />

                        <TextView
                            android:id="@+id/tv_cloud"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/clound_number"
                            android:textColor="@color/text1"
                            android:textSize="@dimen/_16sdp" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_next_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_group"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/next_sevent_day_backround"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/button_7days"
                    android:textAllCaps="true"
                    android:textColor="@color/text1"
                    android:textStyle="bold" />
            </RelativeLayout>

        </RelativeLayout>
    </FrameLayout>


</layout>